# finance-pii-redactor

./: .gitattributes  .gitignore  .vale.ini  CLAUDE.md  GOTCHA.md  README.md  app.py  install.ps1  install.sh  package.bat  package.ps1  package.sh  pyproject.toml  run.bat  run.sh
.vale/styles/config/vocabularies/Base/: accept.txt
data/: README.md
docs/: GOTCHA.md
finance_redactor/: __init__.py  config.py
finance_redactor/application/: __init__.py  ports.py  redact_excel.py  redact_pdf.py  results.py
finance_redactor/domain/: __init__.py  entities.py  pseudonyms.py  rules.py
finance_redactor/infrastructure/: __init__.py
finance_redactor/infrastructure/detection/: __init__.py  custom_recognizer.py  pdf_text_normalizer.py  presidio_detector.py  recasing.py
finance_redactor/infrastructure/documents/: __init__.py  excel_gateway.py  pdf_gateway.py
finance_redactor/infrastructure/names/: __init__.py  master_list_repository.py
finance_redactor/presentation/: __init__.py  crosswalk_view.py  excel_view.py  pdf_view.py  presenters.py
scripts/: migrate_to_master_list.py
tests/: test_master_list_excel.py  test_master_list_repository.py  test_pdf_gateway.py  test_pdf_text_normalizer.py  test_presidio_detector.py  test_pseudonyms.py  test_recasing.py  test_redact_excel.py  test_redact_pdf.py  test_rules.py
